fix add dialog size on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -280,6 +280,7 @@ button, input[type="submit"] {
 @media screen and (max-width: 720px) {
     .add-dialog .dialog-content {
         width: calc(100% - 20px);
+        height: calc(100% - 70px);
         top: 60px;
         left: 10px;
     }
